objects/LOLMyLinksCalloutOverrides__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Override My Link URL&apos;s if needed</description>
    <fields>
        <fullName>App_Code__c</fullName>
        <description>Application Code for the My Link that you want to override the URL</description>
        <label>App_Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is this override active - if not then it will be ignored.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ovr_App_Portal_Url__c</fullName>
        <description>The Override App Portal URL to use instead of the returned app_portal_url</description>
        <label>Ovr_App_Portal_Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ovr_App_Url__c</fullName>
        <description>The Override App URL value to use instead of the existing App_Url value</description>
        <label>Ovr_App_Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LOLMyLinksCalloutOverrides</label>
</CustomObject>